java reformating with spotless AOSP style